Add new errorprone dependency and lint code