@@ -1,5 +1,6 @@
 package com.github.knakielski;
 
+import com.google.common.collect.ImmutableMap;
 import java.math.BigDecimal;
 import java.util.Map;
 
@@ -7,7 +8,7 @@ public class LotCommissionService implements CommissionService {
 
     @Override
     public Map<String, BigDecimal> getCommissions() {
-        return Map.of(
+        return ImmutableMap.of(
                 "siteVisitCommission", BigDecimal.valueOf(182_72, 2),
                 "economyStandardCommission", BigDecimal.valueOf(400_00, 2)
         );
